--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,7 @@
 
     </div>
 
-    <div class="row bg-info p-3 rounded-bottom text-light justify-content-center">
+    <div class="row bg-dark p-3 rounded-bottom text-light justify-content-center">
         <app-footer></app-footer>
     </div>
 
