--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.css";
 
+@import '~bootstrap/scss/functions', 'assets/custom';
+@import "~bootstrap/scss/bootstrap.scss";
+
+
